doc/0.125/_sources/api-reference.rst.txt
.. _api_reference:

API Reference
=============

.. toctree::
   :maxdepth: 1

   reference/get-ad
   reference/get-ad-id
   reference/get-ad-vendor-id
   reference/get-ad-id-funnel
   reference/get-ad-externalid-mapping
   reference/post-ad
   reference/post-ad-prefill
   reference/put-ad-id
   reference/put-ad-id-status
   reference/ad-status
   reference/price-types
   reference/get-image
   reference/post-image
   reference/get-categories
   reference/get-categories-statistics
   reference/get-category-id
   reference/get-category-id-funnel
   reference/get-regions
   reference/get-region-id
   reference/get-feed-config
   reference/post-feed-config
   reference/get-feed-import
   reference/get-feed-import-id-detail
   reference/get-feed-xsd
   reference/get-feed-empty
   reference/get-report
   reference/get-report-detail
   reference/get-report-detail-id
   reference/post-report-detail
   reference/get-report-summary
   reference/get-metrics-ads
   reference/get-metrics-report
   reference/post-metrics-data
   reference/campaign-status
   reference/get-campaign
   reference/get-campaign-id
   reference/put-campaign-id-status
   reference/put-campaign-id-budgets
   reference/get-user
   reference/error-codes
